add down and up arrow

--- a/index.html
+++ b/index.html
@@ -212,87 +212,88 @@
         <div class="product product_1">
           <img src="./pic/bluejordan.png" alt="blue jordan">
           <h3><a href="#">Air Jordan 1 Mid SE Signal Blue</a></h3>
-          <p><span class="price price_product1">$420</span>Lowest ask</p>
+          <p><span class="price price_product1">$420<img class="icon_desktop" src="./pic/going_up.png"></span>Lowest ask <img class="icon_mobile" src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yezzy Boost 350 V2</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
+          
         </div>
         <div class="product">
            <img src="./pic/bluejordan.png" alt="blue jordan">
           <h3><a href="#">Jordan 11</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/bluejordan.png" alt="blue jordan">
           <h3><a href="#">Air Jordan 1 Mid SE All-Star Weekend</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
         <div class="product">
            <img src="./pic/bluejordan.png" alt="blue jordan">
           <h3><a href="#">Air Max Plus TN x Supreme University</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
         <div class="product">
            <img src="./pic/bluejordan.png" alt="blue jordan">
           <h3><a href="#">Air Jordan 3 Retro SP x Fragment ..</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/bluejordan.png" alt="blue jordan">
           <h3><a href="#">Air Max 97 Undefeated Militia</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_up.png"></p>
         </div>
         <div class="product">
            <img src="./pic/yezze.png" alt="blue jordan">
           <h3><a href="#">Yeezy Boost 350 V2 Cream White</a></h3>
-          <p><span class="price">$420</span>Lowest ask</p>
+          <p><span class="price">$420</span><span class="l_ask">Lowest ask</span><img src="./pic/going_down.png"></p>
         </div>
       </div>
       <div class="product_footer">
